--- a/apps/lp/package.json
+++ b/apps/lp/package.json
@@ -15,7 +15,11 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "prettier": "^2.8.7"
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.23",
+    "prettier": "^2.8.7",
+    "tailwindcss": "^3.3.1",
+    "typescript": "^5.0.4"
   },
   "keywords": [
     "gatsby"
