--- a/apps/lp/package.json
+++ b/apps/lp/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
+    "gatsby-plugin-postcss": "^6.9.0",
     "postcss": "^8.4.23",
     "prettier": "^2.8.7",
     "tailwindcss": "^3.3.1",
