--- a/apps/lp/package.json
+++ b/apps/lp/package.json
@@ -19,6 +19,7 @@
     "gatsby-plugin-postcss": "^6.9.0",
     "postcss": "^8.4.23",
     "prettier": "^2.8.7",
+    "tailwind-styled-components": "^2.2.0",
     "tailwindcss": "^3.3.1",
     "typescript": "^5.0.4"
   },
