--- a/apps/lp/package.json
+++ b/apps/lp/package.json
@@ -21,6 +21,7 @@
     "prettier": "^2.8.7",
     "tailwind-styled-components": "^2.2.0",
     "tailwindcss": "^3.3.1",
+    "tsconfig-paths-webpack-plugin": "^4.0.1",
     "typescript": "^5.0.4"
   },
   "keywords": [
